# adventofcode

./: .gitignore  COPYING  README.md
2015/: pull.sh
2015/data/day12/: sample
2015/rust/: Cargo.toml  Session.vim  build.rs  day.rs
2016/: pull.sh
2016/rust/: Cargo.toml  build.rs  day.rs
2017/rust/: Cargo.toml  mkday.sh
2018/rust/: Cargo.toml  build.rs  day.rs
2019/data/: day01.test  day02.test  day02.txt  day03.test  day04.test
2019/py/: aoc.py  run.py
2019/rust/: Cargo.toml
2020/data/: day01.test  day02.test  day03.test  day04.test  day05.test  day06.test  day07.test  day08.test  day09.test  day10.test  day11.test  day12.test  day13.test  day14.test  day15.test  day16.test  day17.test  day18.test  day19.test  day20.test  day21.test  day22.test  day23.test  day24.test  day25.test
2020/py/: aoc.py  run.py
2020/rust/: Cargo.toml
2021/: pull.sh
2021/rust/: Cargo.toml  day.rs  pull.sh
2022/: pull.sh
2022/rust/: Cargo.toml  build.rs  day.rs
2022/rust/src/: days.rs  main.rs  util.rs
2022/rust/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2023/rust/: Cargo.toml  build.rs  mkday.sh
2023/rust/src/: cli.rs  days.rs  util.rs
2023/rust/src/days/: day1.rs  day10.rs  day11.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2024/apl/: Makefile  day1.apl  day2.apl  day3.apl  day4.apl  lib.apl
2025/: pull.sh
2025/apl/: Makefile  day1.apl  lib.apl
(+198 files in other folders)
