[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.release]
debug = true

[dependencies]
ansi-escapes = "0.1.1"
anyhow = "1.0.58"
clap = { version = "3.0.6", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
